# cookiecutter-poetry

./: README.rst  cookiecutter.json
docs/: prompts.rst
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .travis.yml  README.rst  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/docs/: Makefile
{{cookiecutter.project_slug}}/docs/source/: conf.py  modules.rst
{{cookiecutter.project_slug}}/docs/source/_templates/: badges.html  github.html
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/: example.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.module_name}}.py
