[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name.replace("\"", "\\\"") }} <{{ cookiecutter.email }}>"]
{%- set license_classifiers = {
    "MIT license": "MIT",
    "Apache Software License 2.0": "Apache-2.0",
    "GNU General Public License v3.0": "GPL-3.0-only",
    "GNU General Public License v2.0": "GPL-2.0-only",
    "BSD 3-Clause 'New' or 'Revised' License": "BSD-3-Clause",
    "GNU Lesser General Public License v2.1": "LGPL-2.1-only",
    "BSD 2-Clause 'Simplified' License": "BSD-2-Clause",
} %}
{%- if cookiecutter.open_source_license in license_classifiers %}
license = "{{ license_classifiers[cookiecutter.open_source_license] }}"
{%- endif %}
readme = "README.rst"
keywords = ["{{ cookiecutter.project_slug }}"]
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
packages = [
    { include = "{{cookiecutter.module_name}}", from = "src" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"
"Source" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
{% if cookiecutter.create_docs == "y" -%}"Documentation" = "https://{{ cookiecutter.project_slug }}.readthedocs.io"{% endif %}

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
# Python tools:
pip = "^19.2.3"
wheel = "^0.33.6"
watchdog = "^0.9.0"
# Style:
flake8 = "^3.7.8"
isort = "^4.3.21"
yapf = "^0.29.0"
pre-commit = "^2.1.0"
# Testing:
tox = "^3.14.0"
coverage = "^4.5.4"
pytest = "^4.6.5"
pytest-runner = "^5.1"
# Docs:
{% if cookiecutter.create_docs == "y" -%}
Sphinx = "^1.8.5"
numpydoc = "^0.9.2"
sphinx_rtd_theme = "^0.4.3"
{% endif %}
# CLI:
{%- if cookiecutter.command_line_interface|lower == 'click' -%}
Click = "^7.0"
{% endif %}


[tool.isort]
known_first_party = '{{cookiecutter.module_name}}'
known_third_party = ["click", "pytest"]
skip= 'docs/source/conf.py'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

{%- if 'none' not in cookiecutter.command_line_interface|lower %}
[tool.poetry.plugins."console_scripts"]
"{{ cookiecutter.module_name }}" = "{{ cookiecutter.module_name }}.cli:main"
{%- endif %}
